--- a/src/app/Pages/categoria/categoria.page.html
+++ b/src/app/Pages/categoria/categoria.page.html
@@ -7,10 +7,24 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Categoria</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<h3>Listado de Categorias</h3>
+<!-- <ion-searchbar animated="true" placeholder="Buscar Cliente" (ionInput)="buscarcliente($event)"></ion-searchbar> -->
+
+<ion-button size="small" style="float: right;" (click)="setOpen(true)">
+  <ion-icon slot="start" name="add-outline"></ion-icon>
+  Agregar
+</ion-button>
+
+<ion-list *ngFor="let c of categoriaModel">
+  <ion-item>
+    <ion-label>
+      <h2>{{ c.nombre}}</h2>
+      <ion-button (click)="setOpenEdit(true,c)">
+        <ion-icon name="build-outline"></ion-icon>
+      </ion-button>
+      <ion-button (click)="deleteclient(c.id,c.nombre)">
+        <ion-icon name="trash-outline"></ion-icon>
+      </ion-button>
+    </ion-label>
+  </ion-item>
+
